# boat_detection

./: .gitignore  README.md  TODO.txt
report/: fonti.docx  iou.xlsx
src_cpp/: CMakeLists.txt  main.cpp
src_cpp/utils/: boat_detector.cpp  boat_detector.h  boat_detector_process.cpp  classifier.cpp  classifier.h  region_proposal.cpp  region_proposal.h
src_python/: BoW.ipynb  BoW_vocabulary.txt  cnn.ipynb  cnn.pb  frozen_graph.pb
src_python/.ipynb_checkpoints/: BoW-checkpoint.ipynb  BoW_vocabulary-checkpoint.txt  classifier-checkpoint.ipynb  cnn-checkpoint.ipynb
src_python/my_model/: saved_model.pb
src_python/my_model/variables/: variables.index
